src/objects/Fund__c.object
<CustomObject>
    <description>Object will track information related to Funded Patients.</description>
    <fields>
        <fullName>Amount_Limit__c</fullName>
        <description>Amount limit enforced in PO</description>
        <label>Amount Limit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Remaining__c</fullName>
        <description>Amount remaining in the fund</description>
        <formula>Amount_Limit__c - Amount_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Used__c</fullName>
        <description>Amount used in the fund</description>
        <label>Amount Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auth_End_Date__c</fullName>
        <description>Date when the authorization ends</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Auth End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auth_Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date when the authorization starts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Auth Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <defaultValue>If(OR(BEGINS($Profile.Name , &apos;UK&apos;), BEGINS($Profile.Name , &apos;System&apos;)), &apos;United Kingdom&apos;, &apos;&apos;)</defaultValue>
        <description>Possible countries that can be selected defaulted based on the Profile</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Is_Fund_Active__c</fullName>
        <description>Check if the current date falls between the Auth start and end date.</description>
        <formula>If(ISBLANK(Auth_End_Date__c), TRUE, If(Today() &lt;=  Auth_End_Date__c, TRUE, FALSE))</formula>
        <label>Is Fund Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Limit_Type__c</fullName>
        <description>Type of limit enforce in PO</description>
        <label>Limit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Reference_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Tracks the PO Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PO Reference Number</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Payor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fund associated with the Payor.</description>
        <label>Payor</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Fund Payor should be of Payor type if using GBP or EUR. Otherwise Fund Currency should be in USD.</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>contains</operation>
                <value>Payor</value>
            </filterItems>
            <filterItems>
                <field>$Source.CurrencyIsoCode</field>
                <operation>equals</operation>
                <value>USD</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fund (Payor)</relationshipLabel>
        <relationshipName>Payor_Fund</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receiver_Qty_Limit__c</fullName>
        <description>Qty of Receivers that can be used within the Authorized period</description>
        <label>Receiver Qty Limit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receiver_Qty_Remaining__c</fullName>
        <description>Qty of Receiver remaining</description>
        <formula>Receiver_Qty_Limit__c -  Receiver_Qty_Used__c</formula>
        <label>Receiver Qty Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receiver_Qty_Used__c</fullName>
        <description>Total number of receiver qty used within the authorized time frame</description>
        <label>Receiver Qty Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sensor_Limit__c</fullName>
        <description>Qty of Sensors that can be used within the Authorized period</description>
        <label>Sensor Qty Limit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sensor_Qty_Remaining__c</fullName>
        <description>Qty of sensors remaining</description>
        <formula>Sensor_Limit__c -  Sensor_Qty_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sensor Qty Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sensor_Qty_Used__c</fullName>
        <description>Total number of sensor qty used within the authorized time frame</description>
        <label>Sensor Qty Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Study_Id__c</fullName>
        <description>This is the Study Id for Clinincal Studies and is used in Clinical Orders.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the Study Id for Clinincal Studies and is used in Clinical Orders.</inlineHelpText>
        <label>Study Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transmitter_Qty_Limit__c</fullName>
        <description>Qty of Transmitters that can be used within the Authorized period</description>
        <label>Transmitter Qty Limit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transmitter_Qty_Remaining__c</fullName>
        <description>Qty of transmitter remaining</description>
        <formula>Transmitter_Qty_Limit__c -  Transmitter_Qty_Used__c</formula>
        <label>Transmitter Qty Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transmitter_Qty_Used__c</fullName>
        <description>Total number of transmitter qty used within the authorized time frame</description>
        <label>Transmitter Qty Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Fund</label>
    <listViews>
        <fullName>View_All_Funds</fullName>
        <columns>NAME</columns>
        <columns>Limit_Type__c</columns>
        <columns>Payor__c</columns>
        <columns>PO_Reference_Number__c</columns>
        <columns>Is_Fund_Active__c</columns>
        <columns>Country__c</columns>
        <columns>Amount_Limit__c</columns>
        <columns>Amount_Remaining__c</columns>
        <columns>Auth_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>View All Funds</label>
    </listViews>
    <nameField>
        <displayFormat>F-{00000}</displayFormat>
        <label>Fund Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fund</pluralLabel>
    <recordTypes>
        <fullName>Clinical_Studies_Fund</fullName>
        <active>true</active>
        <description>Fund used for Clinical Studies</description>
        <label>Clinical Studies Fund</label>
    </recordTypes>
    <recordTypes>
        <fullName>Purchase_Order</fullName>
        <active>true</active>
        <description>Purchase Order Recordtype to track the Funds</description>
        <label>Purchase Order</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>